asyncgit/src/lib/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__branch__branch_menu.snap
---
source: asyncgit/src/lib/gitui/tests/branch.rs
expression: ctx.redact_buffer()
---
 Branches                                                                       |
▌* main                                                                         |
   merged                                                                       |
   unmerged                                                                     |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
Branch                                                                          |
b Checkout branch/revision                                                      |
c Checkout new branch                                                           |
K Delete branch                                                                 |
q Quit/Close                                                                    |
styles_hash: 81a672f3cfb6bfb7
