asyncgit/src/lib/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__branch__delete_branch_selected.snap
---
source: src/gitui/tests/branch.rs
expression: ctx.redact_buffer()
---
 Branches                                                                       |
 * main                                                                         |
▌  unmerged                                                                     |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git branch -d merged                                                          |
Deleted branch merged (was b66a0bf).                                            |
styles_hash: 653adde7e95e076f
