asyncgit/src/lib/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__branch__delete_unmerged_branch.snap
---
source: asyncgit/src/lib/gitui/tests/branch.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main merged origin/main add initial-file                               |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: b741b40319bb4fef
