asyncgit/src/lib/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__branch__switch_branch_selected.snap
---
source: src/gitui/tests/branch.rs
expression: ctx.redact_buffer()
---
 Branches                                                                       |
   main                                                                         |
▌* merged                                                                       |
   unmerged                                                                     |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git checkout merged                                                           |
Switched to branch 'merged'                                                     |
styles_hash: 3e20cbd7891bb3eb
